--- a/CursoApiRest/pom.xml
+++ b/CursoApiRest/pom.xml
@@ -30,6 +30,16 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>3.1.5</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
